# patchwork

./: .gitignore  pom.xml
patchwork/: README
patchwork-agent/: pom.xml
patchwork-agent/resources/: MANIFEST.MF
patchwork-agent/src/test/resources/: coverage.data
patchwork-bytes/: build.xml  notest.txt  out.txt  pom.xml  project.properties  project.xml
patchwork-bytes/src/site/: site.xml
patchwork-bytes/src/test/resources/: annotation-sample  generic-sample
patchwork-control/: pom.xml
patchwork-control/src/main/assembly/: all-deps.xml
patchwork-control/src/main/resources/: Coverage.base  CoverageExc.base  base.css
patchwork-control/src/site/: site.xml
patchwork-control/src/site/muse/: index
patchwork-control/src/test/resources/: Automaton.bytes  GraphTest.bytes  dfs.j  linesinfo.bytes  (+1 more)
patchwork-ct/: pom.xml
patchwork-it/: pom.xml
patchwork-main/: pom.xml
patchwork-main/src/site/: site.xml
patchwork-maven-plugin/: pom.xml
patchwork-maven-plugin/src/site/: site.xml
patchwork-native/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  PatchworkAgent.vcproj  SimpleProfilingAgent.ncb  SimpleProfilingAgent.sln  ZERO_CHECK.vcproj  cmake_install.cmake
patchwork-native/Debug/: PatchworkAgent.exp  PatchworkAgent.ilk  PatchworkAgent.lib  patchworkagent.idb
patchwork-native/PatchworkAgent.dir/Debug/: BuildLog.htm  mt.dep
patchwork-native/ZERO_CHECK.dir/Debug/: BuildLog.htm
patchwork-native/src/: agent.c
patchwork-ui/: pom.xml
src/main/assembly/: sources.xml
src/site/: site.xml
src/site/resources/: coverage-sample.noweb
(+218 files in other folders)
